<resources>
    <string name="app_name">Credentials</string>
    <string name="string_sign_out">Sign Out</string>
    <string name="string_sign_in">Sign In</string>
    <string name="string_my_profile">My Profile</string>
    <string name="string_add_entry">Add Entry</string>
    <string name="string_delete_account">Delete Account</string>
    <string name="string_name">Name</string>
    <string name="string_title">Title</string>
    <string name="string_website">Website</string>
    <string name="string_email">E-mail</string>
    <string name="string_uid">Unique ID</string>
    <string name="string_null">Null</string>
    <string name="string_username">Username</string>
    <string name="string_password">Password</string>
    <string name="string_add">Add</string>
    <string name="string_refresh">Refresh</string>
    <string name="string_dummy">******</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">SIGN IN</string>

    <string name="slide_1_title">Welcome!</string>
    <string name="slide_1_desc">The easiest way to remember your most complex passwords!</string>

    <string name="slide_2_title">Fire-based</string>
    <string name="slide_2_desc">This app uses Firestore database from Google to store your passwords!</string>

    <string name="slide_3_title">Password Generator</string>
    <string name="slide_3_desc">Generate Super-Secure passwords that are hard to crack!</string>

    <string name="slide_4_title">Warning</string>
    <string name="slide_4_desc">This app is meant only for testing and development purpose. Please do not store your actual passwords as the developer can see them.</string>


    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_password_generator">Password Generator</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_add_entry">Add Entry</string>


    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="requirement">Select your password requirements</string>
    <string name="string_opt_length">Length of password (Min: 6)</string>
    <string name="string_opt_caps">Capital Letters (A–Z)</string>
    <string name="string_opt_small">Small Letters (a–z)</string>
    <string name="string_opt_symbol">Special Characters (Symbols)</string>
    <string name="string_opt_digit">Number Digits (0–9)</string>
    <string name="string_generate">GENERATE</string>
    <string name="string_copy">Copy to Clipboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>